# QuickImageMerge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: release.yml
